<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EzSignin</string>

    <string name="action_settings">Settings</string>

    <string name="prompt_name">Name</string>
    <string name="num_people_household"># People in Household: </string>
    <string name="income_annual">Annual</string>
    <string name="income_monthly">Monthly</string>
    <string name="income_weekly">Weekly</string>
    <string name="income_daily">Daily</string>
    <string name="income_eligibility">Income eligibility</string>
    <string name="food_stamps">Food stamps</string>
    <string name="tanf">Temporary Assistance for Needy Families</string>
    <string name="ssi">Social Security</string>
    <string name="medicaid">Medicaid</string>
    <string name="county">County</string>
    <string name="address">Address</string>
    <string name="save">Save</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="household_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_configure_income_table">ConfigureIncomeTableActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_records">RecordsActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_detail_record">DetailRecordActivit</string>
    <string name="title_activity_summary">SummaryActivity</string>
</resources>
